@@ -1,5 +1,10 @@
 2002-01-24  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 02896] fid attr value should be in sequence
+	* table.c (feed_table_tag): s/line/""/ for HTML_FORM,HTML_N_FORM
+
+2002-01-24  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 02894] Re: goURL
 	* file.c (HTMLtagproc1): s/goURL/gorURL/
 	* keybind.c (EscKeymap): M-u = GOTO_RELATIVE
@@ -2237,4 +2242,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.254 2002/01/23 17:19:47 ukai Exp $
+$Id: ChangeLog,v 1.255 2002/01/23 17:57:10 ukai Exp $
